# boids

./: CMakeLists.txt  README.md
include/: boid.hpp  constants.hpp  gpu_utils.cuh  simulation.hpp  types.hpp  zone.hpp
src/: boid.cpp  gpu_utils.cu  main.cpp  simulation.cpp  zone.cpp
